--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="js/libs/bootstrap.min.js"></script>
 
 <!-- Style CSS -->
+<link href="css/web.css" media="screen" rel="stylesheet">
 <link href="css/bootstrap.css" media="screen" rel="stylesheet">
 <link href="style.css" media="screen" rel="stylesheet">
 
